--- a/web_dynamic/templates/1-hbnb.html
+++ b/web_dynamic/templates/1-hbnb.html
@@ -38,12 +38,12 @@
 	</div>
 	<div class="amenities">
 	  <h3>Amenities</h3>
-	  <h4>&nbsp;</h4>
+	  <h4 id="amenityh4">&nbsp;</h4>
 	  <div class="popover">
 	    <ul>
 	      {% for amenity in amenities %}
 	      <li>
-		<input type="checkbox"/>
+		<input type="checkbox" class="amenitycheck" data-id="{{ amenity.id }}" data-name="{{ amenity.name }}"/>
 		{{ amenity.name }}
 	      </li>
 	      {% endfor %}
