--- a/web_dynamic/static/styles/3-header.css
+++ b/web_dynamic/static/styles/3-header.css
@@ -9,3 +9,15 @@ header .logo {
     left: 20px;
     height: 100%;
 }
+header #api_status {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: #cccccc;
+    position: fixed;
+    right: 30px;
+    top: 2%;
+}
+.available {
+    background-color: #ff545f !important;
+}
